tests/paczka1/fuzzy1/11165140.err
Error in line 4: A428 A428 18,0
Error in line 15: hwYeAM S693 48,8
Error in line 14: rCse6a A428 90,8
Error in line 17: geN4Xcpfk5 S735 61,5
Error in line 23: rCse6a A920 -1,9
Error in line 20: rCse6a A920 6,3
Error in line 30: y2RvWeYk5WC A920 20+,3
Error in line 21: fOFI46maV A920 55,9
Error in line 36: VDkFLb2 A920 98,9
Error in line 38: hwYeAM S693 94,1
Error in line 37: VDkFLb2 S735 23,4
